updated single sign-on and an alternative regular signup

--- a/src/main/resources/templates/StudentsView.html
+++ b/src/main/resources/templates/StudentsView.html
@@ -37,7 +37,7 @@
                     dataType: "json",   //expect html to be returned
                     success: function(response){
                                                   console.log(response);
-                                                   $('.content').html( "");
+                                                   $('.content2').html( "");
                                                    // convert string to JSON
                                                    // response = $.parseJSON(response);
 
