--- a/src/main/resources/templates/customLogin.html
+++ b/src/main/resources/templates/customLogin.html
@@ -90,24 +90,24 @@
 
 
     <div class="omb_login">
-    	<h3 class="omb_authTitle">Login or <a href="http://localhost:2020/register">Sign up</a></h3>
+    	<h3 class="omb_authTitle">Login or <a href="/register">Sign up</a></h3>
 		<div class="row omb_row-sm-offset-3 omb_socialButtons">
     	    <div class="col-xs-4 col-sm-2">
-		        <a href="http://localhost:8080/oauth2/authorize/facebook" class="btn btn-lg btn-block omb_btn-facebook">
+		        <a href="/oauth2/authorize/facebook" class="btn btn-lg btn-block omb_btn-facebook">
 
 					<i class="fa fa-facebook"></i>
 <!--			        <span class="hidden-xs">Facebook</span>-->
 		        </a>
 	        </div>
         	<div class="col-xs-4 col-sm-2">
-		        <a href="http://localhot:8080/oauth2/authorize/twitter" class="btn btn-lg btn-block omb_btn-twitter">
+		        <a href="/oauth2/authorize/twitter" class="btn btn-lg btn-block omb_btn-twitter">
 			        <i class="fa fa-twitter"></i>
 
 <!--			        <span class="hidden-xs">Twitter</span>-->
 		        </a>
 	        </div>
         	<div class="col-xs-4 col-sm-2">
-		        <a href="http://localhost:8080/oauth2/authorize/google" class="btn btn-lg btn-block omb_btn-google">
+		        <a href="/oauth2/authorize/google" class="btn btn-lg btn-block omb_btn-google">
 <!--			        <i class="fa fa-google-plus visible-xs"></i>-->
 					<i class="fa fa-google-plus"></i>
 <!--			        <span class="hidden-xs">Google+</span>-->
